Fixed bugs with handling of nulls, improved documentation and variable names.
git-svn-id: https://svn.apache.org/repos/asf/incubator/nutch/trunk@168175 13f79535-47bb-0310-9956-ffa450edef68